# bartool

./: .gitignore  Cargo.toml  Vagrantfile  readme.adoc  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  consts.rs  ingredient.rs  lib.rs  main.rs  recipe.rs
src/consts/: ingredients.rs  pantry.rs  recipes.rs
tests/: test_ingredient.rs  test_recipe.rs
