[package]
authors = ["a"]
description = "Bartool. A helpful tool for bartending"
name = "bt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.25"
